src/objects/P7S1_CampaignMemberStatusDefaultValues__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>SomTv_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SomTv_Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomTv_Mailing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SomTv_Mailing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomTv_Medien__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SomTv_Medien</label>
        <type>Checkbox</type>
    </fields>
    <label>CampaignMemberStatusDefaultValues</label>
</CustomObject>